# xf86-video-pvrsgx

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
debian/: changelog  control  rules
etc/: Makefile.am
etc/X11/xorg.conf.d/: 10-pvrsgx.conf
man/: fbdev.man  pvrsgx.man
src/: Makefile.am  compat-api.h  crtc.c  extfb.c  extfb.h  fbdev.c  fbdev.h  flip_stats.c  flip_stats.h  omap.c  omap.h  omap_sysfs.c  omap_sysfs.h  omap_tvout.c  omap_tvout.h  omap_video.c  omap_video.h  omap_video_formats.c  omap_video_formats.h  output.c  perf.c  perf.h  pvr_events.h  sgx_cache.c  sgx_cache.h  sgx_dri2.c  sgx_dri2.h  sgx_exa.c  sgx_exa.h  sgx_exa_pvr2d.loT  sgx_exa_user.c  sgx_exa_user.h  sgx_pvr2d.c  sgx_pvr2d.h  sgx_pvr2d_alloc.c  sgx_pvr2d_alloc.h  sgx_pvr2d_flip.c  sgx_pvr2d_flip.h  sgx_xv.c  sgx_xv.h  (+4 more)
